--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -1,5 +1,5 @@
-<div class="conteinerBanner img-fluid">
-   <img src=".../../../../../assets/fondodeimagen.png" position="absolute" class="img-fluid" height="660px" width="100%" alt="Fondodeimagen">
+<div class="conteinerBanner">
+   <img src=".../../../../../assets/fondodeimagen.png" id="imgFondo"  alt="Fondodeimagen">
    <h1>CRISTIAN VILLA</h1>
     <h2>Estudiante de informatica</h2>
 </div>
