--- a/src/app/components/acerca-de/acerca-de.component.css
+++ b/src/app/components/acerca-de/acerca-de.component.css
@@ -1,7 +1,16 @@
+
 .acercade{
     position: relative;
     text-align: center;
-    top:660px;
+    top:650px;
+}
+.fondo{
+    position: absolute;
+    top: 729px;
+    width: 100%;
+    height: 280px;
+    background-color: #272727;
+    z-index: -1;
 }
 .acercade h1{
     font-family: 'Roboto';
@@ -12,7 +21,7 @@
     color: #DA9595;
 }
 .acercade p{
-
+color: #DA9595;
 font-family: 'Roboto';
 font-style: normal;
 font-weight: 300;
