--- a/src/app/components/acerca-de/acerca-de.component.html
+++ b/src/app/components/acerca-de/acerca-de.component.html
@@ -1,6 +1,7 @@
-<div class="acercade">
 
-<img src="../../../assets/Imagendeperfil.png" class ="img-fluid" alt="foto_de_perfil">
-<h1>Acerca de</h1>
- <p> rellenar <br>“rellenar tambien xd d...”</p>
-</div>
+   <div class="acercade">
+   <img src="../../../assets/Imagendeperfil.png" class ="img-fluid" alt="foto_de_perfil">
+   <h1>Acerca de</h1>
+     <p> rellenar <br>“rellenar tambien xd d...”</p>
+    </div>
+    <div class="fondo"></div>
