--- a/src/app/components/banner/banner.component.css
+++ b/src/app/components/banner/banner.component.css
@@ -1,23 +1,24 @@
-
+#imgFondo{
+    height:650px;
+  width:100% ;
+}
 .conteinerBanner {
     position:absolute; 
     width: 100%;
-   height:660px;
+   height:650px;
    top:80px;
 }
-.conteinerBanner.img-fluid:before{
+.conteinerBanner:before{
     content:"";
     width: 100%;
-    height: 660px;
+    height: 650px;
     position: absolute;
    background: rgba(0, 0, 0, 0.6);
 }
-.img-fluid{
-    height:660px;
-}
+
 .conteinerBanner h1{
     position: absolute;
-    top: 180px;
+    top: 200px;
     left: 5%;
     font-family: 'Roboto';
     font-style: normal;
@@ -27,7 +28,7 @@
 }
 .conteinerBanner h2{
     position: absolute;
-    top:240px;
+    top:300px;
     left: 5%;
     font-family: 'Roboto';
     font-style: normal;
