--- a/src/app/components/iconos-soc/iconos-soc.component.css
+++ b/src/app/components/iconos-soc/iconos-soc.component.css
@@ -1,8 +1,10 @@
+.iconoSoc{
+    display: inline-flex;
+}
 .iconoSoc a img{
 color: rgb(255, 255, 255);
 width:40px;
 float:right;
 margin-top:20px;
 /*transition: .5s;*/
-
 }
