--- a/src/app/components/acerca-de/acerca-de.component.html
+++ b/src/app/components/acerca-de/acerca-de.component.html
@@ -1,6 +1,11 @@
-
-   <div class="acercade">
-   <img src="../../../assets/Imagendeperfil.png" class ="img-fluid" alt="foto_de_perfil">
-   <h1>Acerca de</h1>
-     <p> rellenar <br>“rellenar tambien xd d...”</p>
+  <div class="row" >
+    <img src="../../../assets/Imagendeperfil.png" class ="img-fluid" alt="foto_de_perfil">
+    <h1><br></h1>
+   <div class="col-lg-12">
+    <ul>
+      <h1>Acerca de</h1>
+    </ul>
+    <ul>
+      <p> rellenar <br>“rellenar tambien xd d...”</p>
+    </ul>
     </div>
