--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,5 @@
 <app-acerca-de></app-acerca-de>
 <app-expy-educ></app-expy-educ>
 <app-hys></app-hys>
+<app-proyectos></app-proyectos>
+<app-footer></app-footer>
