--- a/src/app/components/acerca-de/acerca-de.component.html
+++ b/src/app/components/acerca-de/acerca-de.component.html
@@ -1,11 +1,7 @@
-  <div class="row" >
-    <img src="../../../assets/Imagendeperfil.png" class ="img-fluid" alt="foto_de_perfil">
-    <h1><br></h1>
-   <div class="col-lg-12">
-    <ul>
+ 
+    <section>
+      <img src="../../../assets/Imagendeperfil.png" id="Fp" alt="un roble">
       <h1>Acerca de</h1>
-    </ul>
-    <ul>
-      <p> rellenar <br>“rellenar tambien xd d...”</p>
-    </ul>
-    </div>
+      <p>borsfsdfksd fsdf jnsd fsdn fjsdnf sd fsdf sd</p>
+    </section>
+    
