--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,3 @@
-<app-header></app-header>
-<app-acerca-de></app-acerca-de>
-<app-expy-educ></app-expy-educ>
-<app-hys></app-hys>
-<app-proyectos></app-proyectos>
-<app-footer></app-footer>
+<div>
+    <router-outlet></router-outlet>
+</div>
