--- a/src/app/components/iconos-soc/iconos-soc.component.html
+++ b/src/app/components/iconos-soc/iconos-soc.component.html
@@ -1,5 +1,4 @@
 <div class="iconoSoc">
-    <a href="#"><img class="icono" src=".../../../../../assets/usuarioBlanco.png" alt="usuario"></a>
     <a href="https://www.instagram.com/cristianvilla._.15/?hl=es" target="_blank">
         <img class="icono" src=".../../../../../assets/instagram.png" alt="instagram"></a>
        <a href="https://www.instagram.com/cristianvilla._.15/?hl=es" target="_blank">
@@ -10,5 +9,6 @@
       <img class="icono" src=".../../../../../assets/linkedin.png" alt="linkedin"></a>
       <a href="https://www.instagram.com/cristianvilla._.15/?hl=es"target="_blank" >
       <img class="icono" src=".../../../../../assets/twitter.png" alt="twitter"></a>
-     
-</div>
+      <!-- <a href="#"><img class="icono" src=".../../../../../assets/usuarioBlanco.png" alt="usuario"></a> -->
+   <button type="button" class="btn btn-outline-light">Login</button>
+    </div>
