--- a/src/app/components/acerca-de/acerca-de.component.html
+++ b/src/app/components/acerca-de/acerca-de.component.html
@@ -1,6 +1,8 @@
  
     <section>
       <img src="../../../assets/Imagendeperfil.png" id="Fp" alt="un roble">
+      <h1 id="nombre">{{persona.nombre}} {{persona.apellido}}</h1>
+      <p>Estudiante de informatica</p>
       <h1>Acerca de</h1>
       <p>borsfsdfksd fsdf jnsd fsdn fjsdnf sd fsdf sd</p>
     </section>
