--- a/src/app/components/hys/hys.component.html
+++ b/src/app/components/hys/hys.component.html
@@ -5,11 +5,12 @@
  <circle-progress
     [percent]="85"
     [radius]="100"
+    [showUnits]="false"
     [outerStrokeWidth]="16"
     [innerStrokeWidth]="8"
-    [title]="'Constancia'"
-    [outerStrokeColor]="'#78C000'"
-    [innerStrokeColor]="'#C7E596'"
+    [title]="'Perseverancia'"
+    [outerStrokeColor]="'#2134ad'"
+    [innerStrokeColor]="'#404880'"
     [animation]="true"
     [animationDuration]="300"
  ></circle-progress>
@@ -18,11 +19,12 @@
         <circle-progress
            [percent]="85"
            [radius]="100"
+           [showUnits]="false"
            [outerStrokeWidth]="16"
            [innerStrokeWidth]="8"
            [title]="'Constancia'"
-           [outerStrokeColor]="'#78C000'"
-           [innerStrokeColor]="'#C7E596'"
+           [outerStrokeColor]="'#2134ad'"
+           [innerStrokeColor]="'#404880'"
            [animation]="true"
            [animationDuration]="300"
         ></circle-progress>
@@ -31,11 +33,12 @@
             <circle-progress
                [percent]="50"
                [radius]="100"
+               [showUnits]="false"
                [outerStrokeWidth]="16"
                [innerStrokeWidth]="8"
-               [title]="'Constancia'"
-               [outerStrokeColor]="'#78C000'"
-               [innerStrokeColor]="'#C7E596'"
+               [title]="'Creatividad'"
+               [outerStrokeColor]="'#2134ad'"
+           [innerStrokeColor]="'#404880'"
                [animation]="true"
                [animationDuration]="300"
             ></circle-progress>
@@ -44,11 +47,12 @@
                 <circle-progress
                    [percent]="90"
                    [radius]="100"
+                   [showUnits]="false"
                    [outerStrokeWidth]="16"
                    [innerStrokeWidth]="8"
-                   [title]="'Constancia'"
-                   [outerStrokeColor]="'#78C000'"
-                   [innerStrokeColor]="'#C7E596'"
+                   [title]="'Colaboracion'"
+                   [outerStrokeColor]="'#2134ad'"
+           [innerStrokeColor]="'#404880'"
                    [animation]="true"
                    [animationDuration]="300"
                 ></circle-progress>
@@ -57,11 +61,12 @@
                     <circle-progress
                        [percent]="30"
                        [radius]="100"
+                       [showUnits]="false"
                        [outerStrokeWidth]="16"
                        [innerStrokeWidth]="8"
-                       [title]="'Constancia'"
-                       [outerStrokeColor]="'#78C000'"
-                       [innerStrokeColor]="'#C7E596'"
+                       [title]="'Comunicacion'"
+                       [outerStrokeColor]="'#2134ad'"
+                       [innerStrokeColor]="'#404880'"
                        [animation]="true"
                        [animationDuration]="300"
                     ></circle-progress>
@@ -70,11 +75,12 @@
                         <circle-progress
                            [percent]="70"
                            [radius]="100"
+                           [showUnits]="false"
                            [outerStrokeWidth]="16"
                            [innerStrokeWidth]="8"
-                           [title]="'Constancia'"
-                           [outerStrokeColor]="'#78C000'"
-                           [innerStrokeColor]="'#C7E596'"
+                           [title]="'Trabajo en equipo'"
+                           [outerStrokeColor]="'#2134ad'"
+                           [innerStrokeColor]="'#404880'"
                            [animation]="true"
                            [animationDuration]="300"
                         ></circle-progress>
