--- a/src/app/components/iconos-soc/iconos-soc.component.html
+++ b/src/app/components/iconos-soc/iconos-soc.component.html
@@ -10,5 +10,7 @@
       <a href="https://www.instagram.com/cristianvilla._.15/?hl=es"target="_blank" >
       <img class="icono" src=".../../../../../assets/twitter.png" alt="twitter"></a>
       <!-- <a href="#"><img class="icono" src=".../../../../../assets/usuarioBlanco.png" alt="usuario"></a> -->
-   <button type="button" class="btn btn-outline-light">Login</button>
-    </div>
+   <button type="button" class="btn btn-outline-light"(click)="login()" *ngIf="!isLogged">Login</button>
+   <button type="button" class="btn btn-outline-light"(click)="onLogOut()" *ngIf="isLogged">Cerrar Sesion</button>
+
+</div>
