--- a/src/app/components/expy-educ/expy-educ.component.html
+++ b/src/app/components/expy-educ/expy-educ.component.html
@@ -1,79 +1,83 @@
 <div class="row">
-       <h1>Experiencia Laboral<br></h1>
+       <h1 class="texttitle">Experiencia Laboral<br></h1>
        <div class="col-lg-12">
            <ul>
                  <li>
                     <img src="../../../assets/headset_icon-icons.com_69367.png" id="call">
-                    <h2>Call Center</h2> - <h3>(years)</h3> 
+                    <h2>Call Center</h2>-<h3>(2022-2022)</h3> 
                  </li>
                  <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam consequuntur dicta eius nesciunt porro laboriosam officia consequatur facilis a corporis esse distinctio autem necessitatibus praesentium ab ipsam, quasi ex nobis!
+                   Atencion al cliente
                  </p>
            </ul>
            <ul>
             <li>
                <img src="../../../assets/alquiler-3.png" id="negocio">
-               <h2>Emprendedor</h2> - <h3>(years)</h3> 
+               <h2>Emprendedor</h2> - <h3>(2019-2022)</h3> 
             </li>
             <p>
-               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam consequuntur dicta eius nesciunt porro laboriosam officia consequatur facilis a corporis esse distinctio autem necessitatibus praesentium ab ipsam, quasi ex nobis!
+              Atencion al cliente<br>Vendedor<br> Repositor
             </p>
       </ul>
       <ul>
         <li>
            <img src="../../../assets/game-illustration-on-a-transparent-background-premium-quality-symbols-line-flat-color-icon-for-concept-and-graphic-design-vector.jpg" id="call">
-           <h2>Tecnico en consolas</h2> - <h3>(years)</h3> 
+           <h2>Tecnico en consolas</h2> - <h3>(2018-2022)</h3> 
         </li>
         <p>
-           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam consequuntur dicta eius nesciunt porro laboriosam officia consequatur facilis a corporis esse distinctio autem necessitatibus praesentium ab ipsam, quasi ex nobis!
+Reparacion de consolas de videojuegos <br> 
+hardware
         </p>
   </ul>
        </div>
-       <h1>Educacion<br></h1>
+       <h1 class="texttitle">Educacion<br></h1>
        <div class="col-lg-12">
            <ul>
                  <li>
-                    <img src="../../../assets/headset_icon-icons.com_69367.png" id="call">
-                    <h2>Colegio gral M belgrano</h2> - <h3>(years)</h3> 
+                    <img src="../../../assets/logo-colegio.png" id="call">
+                    <h2>Colegio "Gral. M. belgrano" N°5095</h2> - <h3>(2014-2018)</h3> 
                  </li>
                  <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam consequuntur dicta eius nesciunt porro laboriosam officia consequatur facilis a corporis esse distinctio autem necessitatibus praesentium ab ipsam, quasi ex nobis!
-                 </p>
+Titulo de Bachiller En Ciencias Naturales                 </p>
            </ul>
            <ul>
             <li>
-               <img src="../../../assets/alquiler-3.png" id="negocio">
-               <h2>Universidad Nacional De Salta</h2> - <h3>(years)</h3> 
+               <img src="../../../assets/escudoUNSa.jpg" id="negocio">
+               <h2>Universidad Nacional De Salta</h2> - <h3>(2019-ACT)</h3> 
             </li>
             <p>
-               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam consequuntur dicta eius nesciunt porro laboriosam officia consequatur facilis a corporis esse distinctio autem necessitatibus praesentium ab ipsam, quasi ex nobis!
-            </p>
+Licenciatura en Analisis de Sistemas            </p>
       </ul>
       <ul>
         <li>
-           <img src="../../../assets/game-illustration-on-a-transparent-background-premium-quality-symbols-line-flat-color-icon-for-concept-and-graphic-design-vector.jpg" id="call">
-           <h2>Argentina programa</h2> - <h3>(years)</h3> 
+           <img src="../../../assets/banner-ok-argentina-programa.jpg" id="call">
+           <h2>Argentina programa</h2> - <h3>(2022-ACT)</h3> 
         </li>
         <p>
-           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam consequuntur dicta eius nesciunt porro laboriosam officia consequatur facilis a corporis esse distinctio autem necessitatibus praesentium ab ipsam, quasi ex nobis!
-        </p>
+full stack jr developer        </p>
   </ul>
   <ul>
    <li>
-      <img src="../../../assets/game-illustration-on-a-transparent-background-premium-quality-symbols-line-flat-color-icon-for-concept-and-graphic-design-vector.jpg" id="call">
-      <h2>Mil Programadores</h2> - <h3>(years)</h3> 
+      <img src="../../../assets/milpro.jpg" id="call">
+      <h2>Mil Programadores</h2> - <h3>(2022-ACT)</h3> 
    </li>
    <p>
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam consequuntur dicta eius nesciunt porro laboriosam officia consequatur facilis a corporis esse distinctio autem necessitatibus praesentium ab ipsam, quasi ex nobis!
+   Introduccion a la programacion en java (finalizado)<br>
+   Introduccion a la programacion en python (en curso)
    </p>
 </ul>
 <ul>
    <li>
-      <img src="../../../assets/game-illustration-on-a-transparent-background-premium-quality-symbols-line-flat-color-icon-for-concept-and-graphic-design-vector.jpg" id="call">
-      <h2>Otros cursos</h2> - <h3>(years)</h3> 
+      <img src="../../../assets/logo-google-activate.png" id="call">
+      <h2>Otros cursos</h2> - <h3>(2022-ACT)</h3> 
    </li>
    <p>
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam consequuntur dicta eius nesciunt porro laboriosam officia consequatur facilis a corporis esse distinctio autem necessitatibus praesentium ab ipsam, quasi ex nobis!
+    Protege tu Negocio: Ciberseguridad en el teletrabajo <br>
+    Digitaliza paso a paso tu negocio con herramientas de Google<br>
+    Curso de Desarrollo de Apps Moviles<br>
+    Curso de introduccion al Desarrollo web: HTML Y CSS (1/2)<br>
+    Curso de introduccion al Desarrollo web: HTML Y CSS (2/2)
+
    </p>
 </ul>
        </div>
