--- a/src/app/components/iniciar-sesion/iniciar-sesion.component.html
+++ b/src/app/components/iniciar-sesion/iniciar-sesion.component.html
@@ -1,27 +1,84 @@
-<h1>Iniciar sesion</h1>
-<form [formGroup]="form">
-    <div class="form-group">
-      <label for="exampleInputEmail1">Email</label>
-      <input type="email" formControlName="email"
-      [ngClass]="{'is-invalid':Email?.errors && Email?.touched,'is-valid':!Email?.errors && Email?.touched}"
-      class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-    <div *ngIf="Email?.errors && Email?.touched"><p *ngIf="Email?.hasError('required')"class="text-danger">El email es requerido.</p>
-    <p *ngIf="Email?.hasError('email')" class="text-danger">El formato del email debe ser valido</p>
-    </div>  
-  </div>
-    <div class="form-group">
-      <label for="exampleInputPassword1">Contraseña</label>
-      <input type="password" formControlName="password" 
-      [ngClass]="{'is-invalid':Password?.errors && Password?.touched,'is-valid':!Password?.errors && Password?.touched}"
-      class="form-control" id="exampleInputPassword1" placeholder="Password">
-      <div *ngIf="Password?.errors && Password?.touched">
-        <p *ngIf="Password?.hasError('required')"class="text-danger">
-          La contraseña es requerido.</p>
-        </div>  
-        <p *ngIf="Password?.errors?.['minlength']" class="text-danger">
-          La contraseña debe ser de 8 o mas caracteres.
-        </p>
+<section class="vh-100">
+  <div class="container-fluid h-custom">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col-md-9 col-lg-6 col-xl-5">
+        <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp"
+          class="img-fluid" alt="Sample image">
+      </div>
+      <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
+        <form>
+          <div class="d-flex flex-row align-items-center justify-content-center ">
+            <p class="lead fw-normal mb-0 me-3">Login</p>
+          
+          </div>
+
+          <div class="divider d-flex align-items-center my-4">
+          </div>
+
+    <form #f="ngForm"(ngSubmit)="onLogin()" novalidate>
+
+ <div class="form-outline mb-4">
+  <input type="email" id="nombreUsuario" name="nombreUsuario" class="form-control form-control-lg"
+    placeholder="ingrese una direccion de Email correctamente" [(ngModel)]="nombreUsuario" required/>
+  <label class="form-label" for="nombreUsuario">Email </label>
+</div>
+
+       <div class="form-outline mb-3">
+      <input type="password" id="password"  class="form-control form-control-lg"
+        placeholder="Ingrese Contraseña" name = "password" [(ngModel)]="password"  required/>
+      <label class="form-label" for="password">Contraseña</label>
+      </div>
+     
+      <button class="btn btn-primary btn-lg"
+      style="padding-left: 2.5rem; padding-right: 2.5rem;" type="submit">Login</button>
+          
+    </form>
+          
+
+
+          <div class="d-flex justify-content-between align-items-center">
+            <!-- Checkbox -->
+            <div class="form-check mb-0">
+              <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3" />
+              <label class="form-check-label" for="form2Example3">
+                Recuerdame
+              </label>
+            </div>
+            <a href="#!" class="text-body">Has olvidado tu contraseña?</a>
+          </div>
+
+          <div class="text-center text-lg-start mt-4 pt-2">
+            <p class="small fw-bold mt-2 pt-1 mb-0">No tienes una cuenta? <a href="#!"
+                class="link-danger">Registrate</a></p>
+          </div>
+
+        </form>
+      </div>
     </div>
-   
-    <button type="submit" class="btn btn-primary">Enviar</button>
-  </form>
+  </div>
+  <div
+    class="d-flex flex-column flex-md-row text-center text-md-start justify-content-between py-4 px-4 px-xl-5 bg-primary">
+    <!-- Copyright -->
+    <div class="text-white mb-3 mb-md-0">
+      Copyright © 2022. All rights reserved.
+    </div>
+    <!-- Copyright -->
+
+    <!-- Right -->
+    <div>
+      <a href="#!" class="text-white me-4">
+        <i class="fab fa-facebook-f"></i>
+      </a>
+      <a href="#!" class="text-white me-4">
+        <i class="fab fa-twitter"></i>
+      </a>
+      <a href="#!" class="text-white me-4">
+        <i class="fab fa-google"></i>
+      </a>
+      <a href="#!" class="text-white">
+        <i class="fab fa-linkedin-in"></i>
+      </a>
+    </div>
+    <!-- Right -->
+  </div>
+</section>
