--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -1,5 +1,7 @@
 <div class="conteinerBanner">
    <img src=".../../../../../assets/fondodeimagen.png" id="imgFondo"  alt="Fondodeimagen">
+   <div class="row">
    <h1>BIENVENIDOS</h1>
     <h2>A mi Portafolio Personal</h2>
+   </div>
 </div>
