--- a/src/app/components/iconos-soc/iconos-soc.component.html
+++ b/src/app/components/iconos-soc/iconos-soc.component.html
@@ -1,13 +1,13 @@
 <div class="iconoSoc">
     <a href="https://www.instagram.com/cristianvilla._.15/?hl=es" target="_blank">
         <img class="icono" src=".../../../../../assets/instagram.png" alt="instagram"></a>
-       <a href="https://www.instagram.com/cristianvilla._.15/?hl=es" target="_blank">
+       <a href="https://www.facebook.com/profile.php?id=100045562684295" target="_blank">
        <img class="icono" src=".../../../../../assets/facebook.png" alt="facebook"></a>
-      <a href="https://www.instagram.com/cristianvilla._.15/?hl=es" target="_blank" >
+      <a href="https://github.com/Loboxos" target="_blank" >
       <img class="icono" src=".../../../../../assets/github.png" alt="github"></a>
-      <a href="https://www.instagram.com/cristianvilla._.15/?hl=es" target="_blank" >
+      <a href="www.linkedin.com/in/cristianvilla15" target="_blank" >
       <img class="icono" src=".../../../../../assets/linkedin.png" alt="linkedin"></a>
-      <a href="https://www.instagram.com/cristianvilla._.15/?hl=es"target="_blank" >
+      <a href="https://twitter.com/CristianVi15"target="_blank" >
       <img class="icono" src=".../../../../../assets/twitter.png" alt="twitter"></a>
       <!-- <a href="#"><img class="icono" src=".../../../../../assets/usuarioBlanco.png" alt="usuario"></a> -->
    <button type="button" class="btn btn-outline-light"(click)="login()" *ngIf="!isLogged">Login</button>
