--- a/src/app/components/expy-educ/expy-educ.component.html
+++ b/src/app/components/expy-educ/expy-educ.component.html
@@ -15,7 +15,7 @@ Nueva Experiencia
         <button type="button" class="btn btn-dark" routerLink="/editexp/{{Experiencia.id}}" *ngIf="isLogged">
           <i class="bi bi-pen">Editar</i>
         </button>
-        <button class="btn btn-danger" (click)="delete(Experiencia.id)">
+        <button class="btn btn-danger" (click)="delete(Experiencia.id)"  *ngIf="isLogged">
           <i class="bi bi-trash-fill"></i> BORRAR</button>
       </h2>
         <p>({{Experiencia.fechaE}})</p>
@@ -26,60 +26,25 @@ Nueva Experiencia
 
 
   <h1 class="texttitle">Educacion<br /></h1>
-  <div class="col-lg-12">
-    <ul>
-      <li>
-        <img src="../../../assets/logo-colegio.png" id="call" />
-        <h2>Colegio "Gral. M. belgrano" N°5095</h2>
-        -
-        <h3>(2014-2018)</h3>
-      </li>
-      <p>Titulo de Bachiller En Ciencias Naturales</p>
+  <div class="col-lg-12" class="menu-exp">
+    <button type="button"class="btn btn-dark" routerLink="/nuevaedu" *ngIf="isLogged">
+ Agregar Educacion
+    </button>
+   </div>
+   <p><br></p>
+   <div class="col-lg-12">
+     <ul *ngFor="let Educacion of educacion">
+       <li>
+         <img src="../../../assets/educacionpng.png" id="call" />
+         
+       <h2 class="title">{{Educacion.nombreE}}  
+         <button type="button" class="btn btn-dark" routerLink="/editedu/{{Educacion.id}}" *ngIf="isLogged">
+           <i class="bi bi-pen">Editar</i>
+         </button>
+         <button class="btn btn-danger" (click)="delete(Educacion.id)"*ngIf="isLogged">
+           <i class="bi bi-trash-fill"></i> BORRAR</button>
+       </h2>
+         <p>({{Educacion.fechaE}})</p>
+       </li>
+       <h3>{{Educacion.descripcionE}}</h3>  
     </ul>
-    <ul>
-      <li>
-        <img src="../../../assets/escudoUNSa.jpg" id="negocio" />
-        <h2>Universidad Nacional De Salta</h2>
-        -
-        <h3>(2019-ACT)</h3>
-      </li>
-      <p>Licenciatura en Analisis de Sistemas</p>
-    </ul>
-    <ul>
-      <li>
-        <img src="../../../assets/banner-ok-argentina-programa.jpg" id="call" />
-        <h2>Argentina programa</h2>
-        -
-        <h3>(2022-ACT)</h3>
-      </li>
-      <p>full stack jr developer</p>
-    </ul>
-    <ul>
-      <li>
-        <img src="../../../assets/milpro.jpg" id="call" />
-        <h2>Mil Programadores</h2>
-        -
-        <h3>(2022-ACT)</h3>
-      </li>
-      <p>
-        Introduccion a la programacion en java (finalizado)<br />
-        Introduccion a la programacion en python (en curso)
-      </p>
-    </ul>
-    <ul>
-      <li>
-        <img src="../../../assets/logo-google-activate.png" id="call" />
-        <h2>Otros cursos</h2>
-        -
-        <h3>(2022-ACT)</h3>
-      </li>
-      <p>
-        Protege tu Negocio: Ciberseguridad en el teletrabajo <br />
-        Digitaliza paso a paso tu negocio con herramientas de Google<br />
-        Curso de Desarrollo de Apps Moviles<br />
-        Curso de introduccion al Desarrollo web: HTML Y CSS (1/2)<br />
-        Curso de introduccion al Desarrollo web: HTML Y CSS (2/2)
-      </p>
-    </ul>
-  </div>
-</div>
