reparacion de errores

--- a/src/app/components/acerca-de/acerca-de.component.html
+++ b/src/app/components/acerca-de/acerca-de.component.html
@@ -5,7 +5,7 @@
       <p>Estudiante de informatica</p>
       <h1>Acerca de</h1>
       <p>Tengo 21 años comenze en el mundo de la programacion a los 18 y aun sigo capacitandome <br><span>
-      en mis tiempos libres me gusta jugar al futbol y jugar videojuegos como toda persona que le gustan las computadoras je...
+      en mis tiempos libres me gusta jugar al futbol y jugar videojuegos como toda persona que le gustan las computadoras dea...
       </span></p>
     </section>
     
