--- a/src/app/components/expy-educ/expy-educ.component.html
+++ b/src/app/components/expy-educ/expy-educ.component.html
@@ -27,9 +27,11 @@ Nueva Experiencia
 
   <h1 class="texttitle">Educacion<br /></h1>
   <div class="col-lg-12" class="menu-exp">
+    <div>
     <button type="button"class="btn btn-dark" routerLink="/nuevaedu" *ngIf="isLogged">
  Agregar Educacion
     </button>
+    </div>
    </div>
    <p><br></p>
    <div class="col-lg-12">
