--- a/src/app/components/iconos-soc/iconos-soc.component.html
+++ b/src/app/components/iconos-soc/iconos-soc.component.html
@@ -5,7 +5,7 @@
        <img class="icono" src=".../../../../../assets/facebook.png" alt="facebook"></a>
       <a href="https://github.com/Loboxos" target="_blank" >
       <img class="icono" src=".../../../../../assets/github.png" alt="github"></a>
-      <a href="www.linkedin.com/in/cristianvilla15" target="_blank" >
+      <a href="https://linkedin.com/in/cristianvilla15" target="_blank" >
       <img class="icono" src=".../../../../../assets/linkedin.png" alt="linkedin"></a>
       <a href="https://twitter.com/CristianVi15"target="_blank" >
       <img class="icono" src=".../../../../../assets/twitter.png" alt="twitter"></a>
