--- a/src/app/components/acerca-de/acerca-de.component.html
+++ b/src/app/components/acerca-de/acerca-de.component.html
@@ -3,7 +3,7 @@
       <img src="{{Persona.img}}" id="Fp" alt="un roble">
       <div>
       <button type="button"class="btn btn-light" routerLink="/editacercade/{{Persona.id}}"*ngIf="isLogged">
-        Editar Imagen
+        Editar Perfil
            </button>
            <h1 id="nombre">{{Persona.nombre}} {{Persona.apellido}}</h1>
         </div>
