--- a/src/app/components/hys/editskills.component.html
+++ b/src/app/components/hys/editskills.component.html
@@ -4,7 +4,7 @@
             <form (ngSubmit)="onUpdate()" novalidate #f="ngForm">
                 <div class="form-group">
                     <label for="nombreSkill">Habilidad</label>
-                    <input type="text" class="form-control" id="nombreSkill" name="nombreSkill" [(ngModel)]="skills.nombreSkill" required>
+                    <input type="text" class="form-control" id="nombreS" name="nombreS" [(ngModel)]="skills.nombreS" required>
                 </div>
                 <div class="form-group">
                     <label for="porcentaje">Porcentaje</label>
