--- a/src/app/components/hys/hys.component.html
+++ b/src/app/components/hys/hys.component.html
@@ -11,7 +11,7 @@
       [showUnits]="false"
       [outerStrokeWidth]="16"
       [innerStrokeWidth]="8"
-      [title]= 'Skills.nombreSkill'
+      [title]= "(Skills.nombreS)"
       [outerStrokeColor]="'#2134ad'"
       [innerStrokeColor]="'#404880'"
       [animation]="true"
