--- a/src/app/components/acerca-de/acerca-de.component.html
+++ b/src/app/components/acerca-de/acerca-de.component.html
@@ -9,8 +9,8 @@
         </div>
       <p>Estudiante de informatica</p>
       <h1>Acerca de</h1>
-      <p>Tengo 21 años comenze en el mundo de la programacion a los 18 y aun sigo capacitandome <br><span>
-      en mis tiempos libres me gusta jugar al futbol y jugar videojuegos como toda persona que le gustan las computadoras ...
+      <p>Tengo 22 años comenze en el mundo de la programacion a los 17 y aun sigo capacitandome <br><span>
+      en mis tiempos libres me gusta jugar futbol y jugar videojuegos , pagina aun en construccion...
       </span></p>
     </section>
  </div>
