--- a/src/app/components/proyectos/proyectos.component.html
+++ b/src/app/components/proyectos/proyectos.component.html
@@ -2,14 +2,14 @@
     <h1 class="titulo-proy">Mis Proyectos</h1>
     <div class="container">
         <div class="col-sm-12 col-md-7 col-lg-7 parte1">
-           <h1>Proyecto Cine en C</h1>
+           <h1>CINE(C)</h1>
            <a href="https://github.com/Loboxos/CineC2019.git" style="color:rgb(51, 51, 61)" target="_blank">Click aqui para ir al Proyecto</a>
         </div>
         <div class="col-sm-12 col-md-3 col-lg-3 offset-md-1 parte2">
             <img src="../../../assets/Captura de pantalla (77).png"class="img-fluid img-proyecto">
         </div>
     <div class="col-sm-12 col-md-7 col-lg-7 parte1">
-           <h1>proyecto en Cine java</h1>
+           <h1>CINE(JAVA)</h1>
            <a href="https://github.com/Loboxos/proyecCine.git" style="color:rgb(51, 51, 61)" target="_blank">Click aqui para ir al Proyecto</a>
     </div>
     <div class="col-sm-12 col-md-3 col-lg-3 offset-md-1 parte2">
