--- a/src/app/components/hys/hys.component.html
+++ b/src/app/components/hys/hys.component.html
@@ -1,17 +1,16 @@
 <div class="row">
-  <h1>HARD Y SOFT SKILLS</h1>
-  <button type="button"class="btn btn-dark" routerLink="/nuevaski" *ngIf="isLogged">
+  <h1 class="col-12">HARD Y SOFT SKILLS</h1>
+  <button type="button" class="btn btn-dark col-12" routerLink="/nuevaski" *ngIf="isLogged">
     Nueva habilidad
-       </button>
-       <div *ngFor="let Skills of ski">
-        <div class="col-sm-4 col-md-4 col-lg-4">
+  </button>
+  <div class="col-sm-4 col-md-4 col-lg-4" *ngFor="let Skills of ski">
     <circle-progress 
-      [percent]=Skills.porcentaje
+      [percent]="Skills.porcentaje"
       [radius]="100"
       [showUnits]="false"
       [outerStrokeWidth]="16"
       [innerStrokeWidth]="8"
-      [title]= "(Skills.nombreS)"
+      [title]="Skills.nombreS"
       [outerStrokeColor]="'#2134ad'"
       [innerStrokeColor]="'#404880'"
       [animation]="true"
@@ -19,10 +18,10 @@
       [showSubtitle]="false"
     ></circle-progress>
     <button type="button" class="btn btn-dark" routerLink="/editski/{{Skills.id}}" *ngIf="isLogged">
-      <i class="bi bi-pen">Editar</i>
+      <i class="bi bi-pen"></i> Editar
     </button>
     <button class="btn btn-danger" (click)="delete(Skills.id)" *ngIf="isLogged">
-      <i class="bi bi-trash-fill"></i> BORRAR</button>
-    </div>
-       </div>
+      <i class="bi bi-trash-fill"></i> BORRAR
+    </button>
+  </div>
 </div>
