--- a/src/app/components/proyectos/proyectos.component.html
+++ b/src/app/components/proyectos/proyectos.component.html
@@ -30,7 +30,7 @@
               <button class="btn btn-danger" (click)="delete(Proyectos.id)" *ngIf="isLogged">
                 <i class="bi bi-trash-fill"></i> BORRAR</button>
             </h1>
-            <a href={{Proyectos.UrlP}} style="color:rgb(51, 51, 61)" target="_blank">Click aqui para ir al Proyecto</a>
+            <a href="{{Proyectos.UrlP}}" style="color:rgb(51, 51, 61)" target="_blank">Click aqui para ir al Proyecto</a>
          </div>
          <div class="col-sm-12 col-md-3 col-lg-3 offset-md-1 parte2">
              <img src="../../../assets/proyectos.png"class="img-fluid img-proyecto">
