--- a/src/app/components/proyectos/editproyectos.component.html
+++ b/src/app/components/proyectos/editproyectos.component.html
@@ -12,7 +12,7 @@
                 </div>
                 <div class="form-group">
                     <label for="urlP">URL del proyecto</label>
-                    <input type="text" class="form-control" id="urlP" name="urlP" [(ngModel)]="proyectos.UrlP" required>
+                    <input type="text" class="form-control" id="urlP" name="urlP" [(ngModel)]="proyectos.urlP" required>
                 </div>
                 <button class="btn btn-primary">
                     Agregar educacion
